[package]
name = "pkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
etherparse = "0.12.0"
derive_builder = "0.11.2"
ctrlc = "3.2.3"

[dependencies.tokio]
version="1.22.0"
features=["full"]

[dependencies.phf]
version="0.11.1"
features=["macros"]
